--- a/css/style.scss
+++ b/css/style.scss
@@ -188,6 +188,11 @@ a.current-round{
 .market-select-button {
 
 }
+
+.left-label{
+	text-align: left!important;
+}
+
 .select-calc , .select-current-round{
     float: left;
     position: relative;
