--- a/css/style.css
+++ b/css/style.css
@@ -537,8 +537,8 @@ tr:last-child {
 	position:relative;*/ }
 
 .login_form {
-  width: 30%;
-  margin: 5% 35%;
+  margin: 5% 15%;
+  width: 70%;
   float: left;
   position: relative; }
 
@@ -552,19 +552,8 @@ tr:last-child {
   width: 99%;
   margin: 5px; }
 
-.signup_form a.half_size {
+.signup_form a {
   text-align: center; }
-
-.login_form input {
-  width: 100%;
-  margin: 10px 0; }
-
-.signup_form input {
-  width: auto;
-  margin: 0; }
-
-.login_form h3 {
-  margin: 0; }
 
 .box {
   float: left;
@@ -807,38 +796,6 @@ input[type=checkbox] {
   margin-right: 5px; }
 
 /* end .squaredFour */
-.competition_creation .user_name {
-  float: left;
-  position: relative; }
-
-.competition_creation #users {
-  float: left;
-  position: relative;
-  width: 100%; }
-
-.competition_creation ul {
-  float: left;
-  position: relative;
-  width: 100%;
-  padding: 0;
-  max-height: 200px;
-  overflow-y: auto;
-  margin: 0; }
-
-.competition_creation li {
-  float: left;
-  position: relative;
-  width: 50%;
-  padding: 5px;
-  margin: 0; }
-
-#users input[type="button"] {
-  width: 49%;
-  padding: 5px;
-  float: left;
-  position: relative;
-  margin: 5px 0; }
-
 #select_all {
   margin-right: 1% !important; }
 
