--- a/css/style.scss
+++ b/css/style.scss
@@ -1,7 +1,7 @@
 $red:#FF0000;
 
 body {
-    background: #C6CEBF;
+    background: #F7F2F2 !important;
     margin: 0;
     font-family: "Open Sans", arial;
 }
@@ -214,11 +214,16 @@ a.current-round{
     width: 750px;
 }
 
+.side-element{
+    margin-top: 10px;
+}
+
 
 .roster-item{
 	float: left;
 	position: relative;
 	width: 100%;
+    background: #FFF;
 }
 
 .old-player{
@@ -495,6 +500,7 @@ table.roster-item {
     position: relative;
     background: #FFF;
     height: auto;
+    width: 100%;
 }
 
 .standing{
@@ -522,9 +528,12 @@ table.roster-item {
     /*margin-bottom: 810px;*/
 }
 
+.no_formation  .old-player{
+    line-height: 40px;
+    margin-left: 10px;
+}
+
 .row_formation{
-    float: left;
-    position: relative;
     margin: 10px 0 0 0 ;
 }
 
@@ -971,25 +980,15 @@ input[type=checkbox] {
 
 /* TEAM LIST */
 
-.team_list{
-    background: none;
-    padding: 0;
-}
-
 .team_item_list{
     height: auto;
     position: relative;
     float: left;
     background: #FFFFFF;
-    margin: 0 1% 10px 0;
-    width: 49% !important;
+    width: 100%;
 }
 
-.team_item_list.margin_left{
-    margin: 0 0 10px 1%;
-}
-
-.team_list .name_team{
+.team_item_list .name_team{
     width: 90%;
     margin: 5px 5%;
     float: left;
@@ -1000,17 +999,17 @@ input[type=checkbox] {
     color:#000000;
 }
 
-.team_list .name_user{
+.team_item_list .name_user{
     font-size: 18px;
     height: 24px;
     line-height: 24px;
 }
 
-.team_list .bottom_team{
+.team_item_list .bottom_team{
     
 }
 
-.team_list a{
+.team_item_list a{
     text-decoration: none;
     color:#000000;
 }
@@ -1026,16 +1025,15 @@ input[type=checkbox] {
     width: 49%;
 }
 
-.team_single #side-roster{
-    margin: 0px;
-}
 
-.team_single .half_size{
-    width:49% !important;
-}
 
 .team_single #side-roster{
-    margin:0 1% 0 0;
+    margin:0;
+    width: 100%;
+}
+
+.team_single .vote{
+    width: 50px;
 }
 
 .title_team_single{
@@ -1043,7 +1041,7 @@ input[type=checkbox] {
     font-size: 25px;
     color: #FFF;
     text-align: center;
-    margin:0 1% 0 0;
+    margin:0;
 }
 
 .title_transfers_single{
