Finito inserimento Bonus e Malus
* Feature: Bonus e Malus per le giornate, e per le classifiche generali
* New: Nuove Classi Base : Handicap.php e figlie , servono a gestire i
bonus e malus
* New: Nuova Classe di Connessione al Database :
ConnectDatabaseHandicaps
* New: Nuova pagina standings-handicaps.php per impostare i bonus e
malus
* Edit: Modificate Classi di Connessione al Database per utilizzare le
nuove classi create

* Edit: Le Classifiche in standings.php ora tengono conto dei bonus e
malus sia per giornate sia di classifica generale
* Edit: Le Formazioni calcolate tengono ora conto di bonus e malus di
giornata

--- a/css/style.css
+++ b/css/style.css
@@ -484,7 +484,7 @@ tr:last-child {
   height: 40px;
   text-align: center; }
 
-.finalvote {
+.finalvote, .handicap-formation {
   background: #515151;
   color: #FFF; }
 
