--- a/css/style.scss
+++ b/css/style.scss
@@ -581,10 +581,12 @@ tr:last-child {
 	text-align: center;
 }
 
-.finalvote{
+.finalvote ,.handicap-formation{
     background: #515151;
     color: #FFF;
 }
+
+
 
 .complete-standing{
 	width: 100%;
