--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,30 @@
 body {
-  background: #F7F2F2 !important;
+  background: #EEEEEE !important;
   margin: 0;
   font-family: "Open Sans", arial; }
 
 * {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box; }
 
-#wrapper {
-  width: 1100px;
+.centering {
+  width: 1200px;
   margin: 0 auto; }
+
+#wrapper {
+  float: left;
+  position: relative;
+  -webkit-box-shadow: 6px 6px 20px 8px rgba(0, 0, 0, 0.37);
+  -moz-box-shadow: 6px 6px 20px 8px rgba(0, 0, 0, 0.37);
+  box-shadow: 6px 6px 20px 8px rgba(0, 0, 0, 0.37);
+  margin-top: 20px;
+  margin-bottom: 20px; }
 
 #header {
   width: 100%;
   height: 100px;
-  background: #f7f2f2;
+  background: #FFFFFF;
   float: left;
   position: relative; }
 
@@ -26,45 +37,128 @@ body {
   float: left;
   position: relative; }
 
-#menu-top, .menu-info {
+#menu-top {
   float: right;
   position: relative;
   width: 900px;
   height: 100px; }
-  #menu-top ul, .menu-info ul {
+  #menu-top ul {
     float: right;
     position: relative;
     display: inline-block;
     list-style: none;
     margin: 0; }
-  #menu-top li, .menu-info li {
+  #menu-top li {
     display: inline;
     line-height: 100px;
     height: 100px;
     margin: 5px;
     text-decoration: none !important; }
-  #menu-top li, .menu-info li, #menu-top a, .menu-info a {
+  #menu-top li, #menu-top a {
     text-decoration: none;
     color: #FF0000; }
 
-.menu-info li {
-  line-height: 50px; }
-
-.menu-info li {
-  line-height: 50px; }
-
-.menu-settings {
-  background: #FF0000 !important; }
-
-.menu-settings * {
-  color: #FFF !important; }
-
-.menu-info {
-  width: 100%;
-  height: 50px;
+.main-menu {
   float: left;
   position: relative;
-  background: #586969; }
+  width: 100%;
+  height: 100px;
+  background: #ededed; }
+
+.user-menu {
+  position: relative;
+  float: left;
+  width: auto;
+  height: 100%; }
+
+.avatar {
+  float: left;
+  position: relative;
+  margin: 10px;
+  height: 80px;
+  width: 80px;
+  background: #FF0000; }
+
+.user-info {
+  height: 100%;
+  float: left;
+  position: relative; }
+  .user-info .user-info-item {
+    color: #FF0000;
+    float: left;
+    position: relative;
+    margin: 10px;
+    height: 35px;
+    line-height: 35px;
+    width: 100%;
+    font-size: 30px; }
+  .user-info .username {
+    margin-bottom: 5px; }
+  .user-info .name-team {
+    margin-top: 5px;
+    font-size: 26px;
+    color: black; }
+
+.menu {
+  list-style: none;
+  margin: 0;
+  float: right;
+  position: relative;
+  padding: 0;
+  height: 100%;
+  font-size: 25px;
+  line-height: 40px;
+  z-index: 2000;
+  color: #FF0000;
+  width: auto; }
+  .menu * {
+    list-style: none; }
+  .menu a {
+    color: #FF0000; }
+  .menu > li {
+    display: inline;
+    height: 100px;
+    padding: 30px 10px;
+    position: relative;
+    float: left;
+    margin: 0 10px; }
+  .menu li:hover ul {
+    display: block; }
+  .menu ul {
+    position: absolute;
+    top: 100px;
+    left: 0;
+    padding: 0;
+    background: #AAAAAA;
+    display: none;
+    width: 300px; }
+    .menu ul li:first-child {
+      border: none !important; }
+    .menu ul li {
+      font-size: 20px;
+      height: 55px;
+      line-height: 35px;
+      width: auto;
+      float: left;
+      position: relative;
+      color: #FFFFFF !important;
+      width: 100%;
+      border-top: 1px solid #FFFFFF;
+      color: #FFFFFF;
+      padding: 10px; }
+      .menu ul li a {
+        color: #FFFFFF; }
+  .menu .admin-menu {
+    right: 0;
+    left: auto; }
+
+.not-logged {
+  float: left !important; }
+
+.alert-box {
+  width: 100%;
+  height: auto;
+  background: #FFFFFF; }
 
 #slide_competitions {
   width: 20%;
@@ -114,7 +208,8 @@ body {
   height: 40px;
   width: 100%;
   background: #FFF;
-  padding: 5px; }
+  padding: 5px;
+  margin-top: 10px; }
 
 .name-team {
   position: relative;
@@ -489,7 +584,8 @@ tr:last-child {
   color: #FFF; }
 
 .complete-standing {
-  width: 100%; }
+  width: 100%;
+  line-height: 30px; }
 
 .value_player {
   text-align: center; }
@@ -535,10 +631,10 @@ tr:last-child {
 
 .error_display {
   /*background: #FF0000;
-  opacity: 0.5;*/
-  width: 98%;
-  margin: 1%;
-    /*padding: 1%;
+    opacity: 0.5;*/
+  width: 100%;
+  margin: 1% 0  !important;
+  /*padding: 1%;
     color:#FFF;
     float:left;
 	position:relative;*/ }
@@ -914,7 +1010,8 @@ input[type=checkbox] {
 /* HOME PAGE */
 .home_page {
   float: left;
-  position: relative; }
+  position: relative;
+  margin-top: 20px; }
 
 .row_home {
   float: left;
@@ -922,10 +1019,13 @@ input[type=checkbox] {
   margin: 10px 0 0 0; }
 
 .box_home {
-  background: #FFF;
+  background: #FFFFFF;
   float: left;
   position: relative;
-  width: 100%; }
+  width: 100%;
+  /*-webkit-box-shadow: 2px 2px 10px 4px rgba(0,0,0,0.37);
+	-moz-box-shadow: 2px 2px 10px 4px rgba(0,0,0,0.37);
+	box-shadow: 2px 2px 10px 4px rgba(0,0,0,0.37);*/ }
 
 .box_home .name_market {
   text-align: center;
@@ -985,6 +1085,9 @@ input[type=checkbox] {
 #clock * {
   box-sizing: content-box !important; }
 
+.county, .county * {
+  background: #FFFFFF !important; }
+
 .county-label-days, .county-label-hours, .county-label-minutes, .county-label-seconds {
   width: 70px !important; }
 
@@ -994,4 +1097,8 @@ input[type=checkbox] {
 span.county-days, span.county-minutes, span.county-hours, span.county-seconds {
   font-size: 40px; }
 
-/*# sourceMappingURL=style.css.map */
+/* PROFILE */
+.settings-profile {
+  background: #FFFFFF;
+  margin-top: 10px;
+  padding: 10px; }
