--- a/css/style.css
+++ b/css/style.css
@@ -38,10 +38,14 @@ h1, h2, h3 {
   box-shadow: 6px 6px 20px 8px rgba(0, 0, 0, 0.37);
   margin-top: 20px;
   margin-bottom: 20px; }
+  @media screen and (max-width: 700px) {
+    #wrapper {
+      margin-top: 0;
+      margin-bottom: 0; } }
 
 #header {
   width: 100%;
-  height: 100px;
+  min-height: 100px;
   background: #FFFFFF;
   float: left;
   position: relative; }
@@ -58,7 +62,6 @@ h1, h2, h3 {
 .menu-top {
   float: right;
   position: relative;
-  width: 900px;
   height: 100px; }
   .menu-top ul {
     float: right;
@@ -89,7 +92,6 @@ h1, h2, h3 {
 .user-menu {
   position: relative;
   float: left;
-  width: auto;
   height: 100%; }
 
 .avatar {
@@ -104,18 +106,18 @@ h1, h2, h3 {
     width: auto; }
 
 .user-info {
-  height: 100%;
   float: left;
-  position: relative; }
+  position: relative;
+  width: 170px; }
   .user-info .user-info-item {
     color: #FF0000;
     float: left;
     position: relative;
-    margin: 10px;
+    margin: 10px 5%;
     height: 35px;
     line-height: 35px;
-    width: 100%;
-    font-size: 30px; }
+    font-size: 30px;
+    width: 90%; }
   .user-info .username {
     margin-bottom: 5px; }
   .user-info .name-team {
@@ -152,11 +154,12 @@ h1, h2, h3 {
   .menu ul {
     position: absolute;
     top: 100px;
-    left: 0;
+    right: 0;
     padding: 0;
     background: #AAAAAA;
     display: none;
-    width: 300px; }
+    width: 300px;
+    z-index: 3000; }
     .menu ul li:first-child {
       border: none !important; }
     .menu ul li {
@@ -195,6 +198,20 @@ h1, h2, h3 {
 
 .white-background {
   background: #FFFFFF; }
+
+/*.margin-10-when-resize{
+	
+	
+	@media screen and (max-width: 991px){
+    	margin-top: 10px;
+    }
+}*/
+@media screen and (max-width: 991px) {
+  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+    margin-top: 10px;
+    position: relative;
+    width: 100%;
+    float: left; } }
 
 /* SLIDE */
 .slide {
@@ -259,6 +276,16 @@ h1, h2, h3 {
     -webkit-box-shadow: 6px 6px 20px 8px rgba(0, 0, 0, 0.37);
     -moz-box-shadow: 6px 6px 20px 8px rgba(0, 0, 0, 0.37);
     box-shadow: 6px 6px 20px 8px rgba(0, 0, 0, 0.37); }
+    @media screen and (max-width: 700px) {
+      .join a, .join a:hover {
+        margin: 10px 10%;
+        padding: 10px 10%;
+        width: 80%;
+        height: 80px;
+        line-height: 60px; } }
+  @media screen and (max-width: 700px) {
+    .join {
+      height: 100px; } }
 
 .container-fluid ul {
   font-size: 20px; }
@@ -332,8 +359,7 @@ h1, h2, h3 {
 #team-info {
   position: relative;
   float: left;
-  height: 40px;
-  height: 40px;
+  min-height: 40px;
   width: 100%;
   background: #FFF;
   padding: 5px;
@@ -406,26 +432,30 @@ a.current-round {
 
 .old-player, .new-player {
   border-bottom: 1px solid #f8f8f8;
-  height: 40px;
+  height: 50px;
   float: left;
   position: relative;
-  width: 100%; }
+  width: 100%;
+  cursor: pointer; }
 
 .role-icon {
   float: left;
   position: relative;
   width: auto;
-  margin: 5px; }
+  margin: 5px;
+  height: 40px; }
   .role-icon span {
     padding: 5px 10px;
+    height: 40px;
+    line-height: 30px;
     float: left; }
 
 .name-player-item {
   margin: 5px 5px 5px 0;
   float: left;
   position: relative;
-  height: 30px;
-  line-height: 30px; }
+  height: 40px;
+  line-height: 40px; }
 
 .team-player-item {
   color: #FF0000; }
@@ -434,17 +464,21 @@ a.current-round {
   margin: 5px 5px 5px 0;
   float: left;
   position: relative;
-  height: 30px;
-  line-height: 30px; }
+  height: 40px;
+  line-height: 40px; }
 
 .info-player-item {
   float: right;
-  position: relative; }
+  position: relative;
+  height: 50px; }
 
 .new-player {
   width: 50%;
   list-style: none;
   display: block; }
+  @media screen and (max-width: 840px) {
+    .new-player {
+      width: 100%; } }
 
 .td-name {
   float: left; }
@@ -511,6 +545,9 @@ a.current-round {
   float: right;
   position: relative;
   padding: 3px; }
+  @media screen and (max-width: 450px) {
+    #value-selector {
+      width: 200px; } }
 
 #players {
   position: relative;
@@ -550,9 +587,6 @@ a.current-round {
   list-style: none;
   background: #FFF; }
 
-.new-player {
-  width: 50%; }
-
 .name-role {
   padding: 5px;
   color: #FFF;
@@ -564,8 +598,8 @@ table.roster-item {
   float: left;
   position: relative; }
 
-.in-roster-player td, .in-team-player td, .in-reserve-player td {
-  padding: 5px; }
+.in-roster-player, .in-team-player, .in-reserve-player {
+  cursor: pointer; }
 
 .type_name {
   float: left;
@@ -646,7 +680,7 @@ table.roster-item {
 
 .standing {
   height: auto;
-  margin: 10px 0 0 0; }
+  margin-top: 10px; }
 
 .user_position {
   background: rgba(255, 0, 0, 0.5);
@@ -670,6 +704,9 @@ table.roster-item {
 
 .row_formation {
   margin-top: 10px; }
+  @media screen and (max-width: 991px) {
+    .row_formation {
+      margin-top: 0; } }
 
 .title_formation {
   padding: 1% 1% 1% 2%;
@@ -707,7 +744,7 @@ tr:last-child {
   padding: 5px;
   width: 40px;
   margin: 0 !important;
-  height: 40px;
+  height: 50px;
   text-align: center; }
 
 .finalvote, .handicap-formation {
@@ -1105,11 +1142,15 @@ input[type=checkbox] {
 
 .title_transfers_single {
   background: #586969;
-  margin: 0 0 0 1%; }
+  width: 100%;
+  float: left;
+  position: relative; }
 
 .transfers {
-  margin: 0 0 0 1%;
-  padding: 0; }
+  float: left;
+  position: relative;
+  padding: 0;
+  width: 100%; }
 
 .name_market {
   background: #FF0000;
@@ -1135,7 +1176,8 @@ input[type=checkbox] {
   position: relative; }
 
 .player_name {
-  line-height: 32px;
+  line-height: 50px;
+  height: 50px;
   margin-left: 5px;
   float: left;
   position: relative; }
@@ -1148,16 +1190,21 @@ input[type=checkbox] {
 
 .info_transfer {
   float: right;
-  position: relative; }
+  position: relative;
+  height: 50px;
+  line-height: 50px; }
 
 .value_transfer {
   float: right;
-  position: relative; }
+  position: relative;
+  height: 50px;
+  line-height: 50px; }
 
 /* HOME PAGE */
+.inside {
+  width: 100%; }
+
 .home_page {
-  float: left;
-  position: relative;
   margin-top: 20px; }
 
 .row_home {
@@ -1168,7 +1215,6 @@ input[type=checkbox] {
 .box_home {
   background: #FFFFFF;
   float: left;
-  position: relative;
   width: 100%;
   /*-webkit-box-shadow: 2px 2px 10px 4px rgba(0,0,0,0.37);
 	-moz-box-shadow: 2px 2px 10px 4px rgba(0,0,0,0.37);
@@ -1181,17 +1227,16 @@ input[type=checkbox] {
   opacity: 1; }
 
 .three_quarter {
-  position: relative;
   padding: 10px; }
 
 .first_row_home {
-  height: 170px; }
+  min-height: 170px; }
 
 .welcome {
   background: red;
   color: #FFF;
   font-size: 35px;
-  height: 170px; }
+  min-height: 170px; }
 
 .punti_highlight {
   color: #515151; }
@@ -1208,9 +1253,12 @@ input[type=checkbox] {
   cursor: pointer; }
 
 .one_quarter {
-  padding: 10px;
+  padding: 10px; }
+
+.count_closing_time {
   float: left;
-  position: relative; }
+  position: relative;
+  width: 100%; }
 
 .recap_last_round, .recap_standings {
   padding: 10px; }
