--- a/css/style.scss
+++ b/css/style.scss
@@ -53,11 +53,16 @@ h1,h2,h3{
 	box-shadow: 6px 6px 20px 8px rgba(0,0,0,0.37);
 	margin-top: 20px;
 	margin-bottom: 20px;
+	
+	@media screen and (max-width: 700px){
+    	margin-top: 0;
+    	margin-bottom: 0;
+    }
 }
 
 #header {
     width: 100%;
-    height: 100px;
+    min-height: 100px;
     background:#FFFFFF;
     float: left;
     position: relative;
@@ -79,7 +84,6 @@ h1,h2,h3{
 .menu-top{
 	float:right;
 	position:relative;
-	width: 900px;
 	height: 100px;
 
 
@@ -122,7 +126,6 @@ h1,h2,h3{
 .user-menu{
 	position: relative;
 	float: left;
-	width: auto;
 	height: 100%;
 }
 
@@ -142,19 +145,18 @@ h1,h2,h3{
 }
 
 .user-info{
-	height: 100%;
 	float: left;
 	position: relative;
-	
+	width: 170px;	
 	.user-info-item{
 		color: $red;
 		float: left;
 		position: relative;
-		margin: 10px;
+		margin: 10px 5%;
 		height: 35px;
 		line-height: 35px;
-		width: 100%;
 		font-size: 30px;
+		width: 90%;
 	}
 	
 	
@@ -211,11 +213,12 @@ h1,h2,h3{
 	ul{
 		position: absolute;
 		top: 100px;
-		left: 0;
+		right: 0;
 		padding: 0;
 		background: $gray;
 		display: none;
 		width: 300px;
+		z-index: 3000;
 		
 		li:first-child{
 			border: none !important;
@@ -270,6 +273,23 @@ h1,h2,h3{
 
 .white-background{
 	background: $white;
+}
+
+/*.margin-10-when-resize{
+	
+	
+	@media screen and (max-width: 991px){
+    	margin-top: 10px;
+    }
+}*/
+
+.col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12{
+	@media screen and (max-width: 991px){
+    	margin-top: 10px;
+    	position: relative;
+    	width: 100%;
+    	float: left;
+    }
 }
 
 /* SLIDE */
@@ -361,7 +381,20 @@ h1,h2,h3{
 		-webkit-box-shadow: 6px 6px 20px 8px rgba(0,0,0,0.37);
 		-moz-box-shadow: 6px 6px 20px 8px rgba(0,0,0,0.37);
 		box-shadow: 6px 6px 20px 8px rgba(0,0,0,0.37);
+		
+		@media screen and (max-width: 700px){
+	    	margin: 10px 10%;
+	    	padding: 10px 10%;
+	    	width: 80%;
+	    	height: 80px;
+	    	line-height: 60px;
+	    	
+	    }
 	}
+	
+	@media screen and (max-width: 700px){
+    	height: 100px;
+    }
 	
 	
 }
@@ -463,8 +496,7 @@ h1,h2,h3{
 #team-info {
     position: relative;
     float: left;
-    height: 40px;
-	height: 40px;
+	min-height: 40px;
 	width: 100%;
     background: #FFF;
     padding: 5px;
@@ -556,10 +588,13 @@ a.current-round{
 
 .old-player{
     border-bottom: 1px solid #f8f8f8;
-    height: 40px;
+    height: 50px;
     float:left;
     position: relative;
     width: 100%;
+    cursor: pointer;
+    
+    
 }
 
 .role-icon{
@@ -567,9 +602,12 @@ a.current-round{
 	position: relative;
 	width: auto;
 	margin:5px;
+	height: 40px;
 	
 	span{
 		padding: 5px 10px;
+		height: 40px;
+		line-height: 30px;
 		float: left; 
 	}
 }
@@ -578,8 +616,8 @@ a.current-round{
 	margin: 5px 5px 5px 0;
 	float: left;
 	position: relative;
-	height: 30px;
-	line-height: 30px;
+	height: 40px;
+	line-height: 40px;
 }
 
 .team-player-item{
@@ -591,13 +629,14 @@ a.current-round{
 	margin: 5px 5px 5px 0;
 	float: left;
 	position: relative;
-	height: 30px;
-	line-height: 30px;
+	height: 40px;
+	line-height: 40px;
 }
 
 .info-player-item{
 	float: right;
 	position: relative;
+	height: 50px;
 }
 
 .info-player-link-item{
@@ -609,6 +648,10 @@ a.current-round{
 	width: 50%;
 	list-style: none;
 	display: block;
+	
+	@media screen and (max-width: 840px){
+    	width: 100%;
+    }
 	
 }
 
@@ -686,6 +729,10 @@ a.current-round{
     float: right;
     position: relative;
     padding: 3px;
+    
+    @media screen and (max-width: 450px){
+    	width: 200px;
+    }
 }
 #players {
     position: relative;
@@ -732,9 +779,7 @@ a.current-round{
     background: #FFF;
 }
 
-.new-player {
-    width: 50%;
-}
+
 
 .name-role {
     padding: 5px;
@@ -747,9 +792,11 @@ table.roster-item {
     float: left;
     position: relative;
 }
-.in-roster-player td, .in-team-player td, .in-reserve-player td {
-    padding: 5px;
+
+.in-roster-player , .in-team-player , .in-reserve-player  {
+    cursor: pointer;
 }
+
 .type_name {
     float: left;
     position: relative;
@@ -838,7 +885,7 @@ table.roster-item {
 
 .standing{
     height: auto;
-    margin:10px 0 0 0;
+    margin-top:10px;
 }
 
 .user_position{
@@ -868,6 +915,10 @@ table.roster-item {
 
 .row_formation{
     margin-top: 10px ;
+    
+    @media screen and (max-width: 991px){
+    	margin-top: 0;
+    }
 }
 
 .title_formation {
@@ -910,7 +961,7 @@ tr:last-child {
 	padding: 5px; 
 	width: 40px;
 	margin:0 !important;
-	height:40px;
+	height:50px;
 	text-align: center;
 }
 
@@ -1412,12 +1463,16 @@ input[type=checkbox] {
 
 .title_transfers_single{
    background: #586969;
-    margin:0 0 0 1%;
+   width: 100%;
+   float: left;
+   position: relative;
 }
 
 .transfers{
-    margin:0 0 0 1%;
+	float: left;
+	position: relative;
     padding: 0;
+    width: 100%;
 }
 
 .name_market{
@@ -1448,7 +1503,8 @@ input[type=checkbox] {
 }
 
 .player_name{
-    line-height: 32px;
+    line-height: 50px;
+    height: 50px;
     margin-left: 5px;
     float: left;
     position: relative;
@@ -1464,19 +1520,25 @@ input[type=checkbox] {
 .info_transfer{
     float: right;
     position: relative;
+    height: 50px;
+    line-height: 50px;
 }
 
 .value_transfer{
     float: right;
     position: relative;
+    height: 50px;
+    line-height: 50px;
 }
 
 
 /* HOME PAGE */
 
+.inside{
+	width: 100%;
+}
+
 .home_page{
-    float: left;
-    position: relative;
     margin-top: 20px;
 }
 
@@ -1489,9 +1551,12 @@ input[type=checkbox] {
 
 .box_home{
     background: $white;
+    
     float:left;
-    position: relative;
     width: 100%;
+    
+    
+    
     
     /*-webkit-box-shadow: 2px 2px 10px 4px rgba(0,0,0,0.37);
 	-moz-box-shadow: 2px 2px 10px 4px rgba(0,0,0,0.37);
@@ -1507,13 +1572,13 @@ input[type=checkbox] {
 
 .three_quarter{
     //width: 63%;
-    position: relative;
+
     //float: left;
     padding: 10px;
 }
 
 .first_row_home{
-    height: 170px;
+    min-height: 170px;
 }
 
 .welcome{
@@ -1521,7 +1586,7 @@ input[type=checkbox] {
     background: rgba(255,0,0,1);
     color: #FFF;
     font-size: 35px;
-	height: 170px;
+	min-height: 170px;
 }
 
 .punti_highlight{
@@ -1545,12 +1610,14 @@ input[type=checkbox] {
 .one_quarter{
     //width: 36%;
     padding: 10px;
-    float: left;
-    position: relative;
+    
+    
 }
 
 .count_closing_time{
-    
+    float: left;
+    position: relative;
+    width: 100%;
 }
 
 .recap_last_round , .recap_standings{
