--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,12 @@ h1, h2, h3 {
     #wrapper {
       margin-top: 0;
       margin-bottom: 0; } }
+  @media screen and (max-width: 991px) {
+    #wrapper {
+      -webkit-box-shadow: none;
+      -moz-box-shadow: none;
+      box-shadow: none;
+      margin: 0; } }
 
 #header {
   width: 100%;
@@ -58,23 +64,41 @@ h1, h2, h3 {
   width: 200px;
   float: left;
   position: relative; }
+  @media screen and (max-width: 700px) {
+    #logo {
+      width: 50%;
+      margin: 0 25%; } }
 
 .menu-top {
   float: right;
   position: relative;
-  height: 100px; }
+  height: auto; }
+  @media screen and (max-width: 700px) {
+    .menu-top {
+      width: 100%; } }
   .menu-top ul {
     float: right;
     position: relative;
     display: inline-block;
     list-style: none;
     margin: 0; }
+    @media screen and (max-width: 700px) {
+      .menu-top ul {
+        width: 100%;
+        padding: 0; } }
   .menu-top li {
     display: inline;
     line-height: 100px;
     height: 100px;
     margin: 5px;
     text-decoration: none !important; }
+    @media screen and (max-width: 700px) {
+      .menu-top li {
+        width: 100%;
+        display: block;
+        text-align: center;
+        height: 50px;
+        line-height: 50px; } }
   .menu-top li, .menu-top a {
     text-decoration: none;
     color: #FF0000; }
@@ -108,7 +132,7 @@ h1, h2, h3 {
 .user-info {
   float: left;
   position: relative;
-  width: 170px; }
+  width: 320px; }
   .user-info .user-info-item {
     color: #FF0000;
     float: left;
@@ -141,6 +165,9 @@ h1, h2, h3 {
     list-style: none; }
   .menu a {
     color: #FF0000; }
+  @media screen and (max-width: 700px) {
+    .menu {
+      width: 100%; } }
   .menu > li {
     display: inline;
     height: 100px;
@@ -149,12 +176,17 @@ h1, h2, h3 {
     float: left;
     margin: 0 10px;
     cursor: pointer; }
+    @media screen and (max-width: 700px) {
+      .menu > li {
+        display: block;
+        width: 100%;
+        text-align: center; } }
   .menu li:hover ul {
     display: block; }
   .menu ul {
     position: absolute;
     top: 100px;
-    right: 0;
+    left: 0;
     padding: 0;
     background: #AAAAAA;
     display: none;
@@ -162,6 +194,16 @@ h1, h2, h3 {
     z-index: 3000; }
     .menu ul li:first-child {
       border: none !important; }
+    @media screen and (max-width: 700px) {
+      .menu ul {
+        width: 100%; } }
+    .menu ul a {
+      border-top: 1px solid #FFFFFF;
+      float: left;
+      position: relative;
+      width: 100%; }
+    .menu ul a:first-child {
+      border-top: none !important; }
     .menu ul li {
       font-size: 20px;
       height: 55px;
@@ -247,8 +289,10 @@ h1, h2, h3 {
   font-family: boton-light; }
   .presentation p {
     font-size: 25px; }
-  .presentation h1 {
+  .presentation h1, .presentation h3 {
     color: #FF0000; }
+  .presentation h2 {
+    color: #246BB2; }
 
 .motivi {
   background: #FFFFFF; }
@@ -333,28 +377,48 @@ h1, h2, h3 {
   position: relative;
   width: 100%;
   background: #FF0000;
-  height: 150px; }
+  min-height: 150px; }
   #footer * {
     color: #FFFFFF !important; }
   #footer .menu-top {
     float: left;
-    height: 150px; }
+    min-height: 150px; }
     #footer .menu-top ul {
       float: left;
-      height: 150px; }
+      height: auto; }
+      @media screen and (max-width: 700px) {
+        #footer .menu-top ul {
+          margin: 0 !important;
+          padding: 0 !important; } }
       #footer .menu-top ul li {
         line-height: 150px; }
+        @media screen and (max-width: 700px) {
+          #footer .menu-top ul li {
+            line-height: 50px; } }
 
 .logozenit {
   height: 150px;
   float: right;
   position: relative; }
+  @media screen and (max-width: 700px) {
+    .logozenit {
+      width: 100%;
+      height: auto; } }
   .logozenit img {
     max-height: 150px;
     padding: 25px;
     width: auto;
     float: right;
     position: relative; }
+    @media screen and (max-width: 840px) {
+      .logozenit img {
+        width: 100%; } }
+    @media screen and (max-width: 700px) {
+      .logozenit img {
+        width: 70%;
+        margin: 0 15%;
+        height: auto;
+        max-height: none; } }
 
 #team-info {
   position: relative;
@@ -590,7 +654,8 @@ a.current-round {
 .name-role {
   padding: 5px;
   color: #FFF;
-  margin-bottom: 5px; }
+  margin-bottom: 5px;
+  line-height: 40px; }
 
 table.roster-item {
   width: 100%;
@@ -772,7 +837,7 @@ tr:last-child {
   margin-bottom: 10px; }
 
 .campo-verde {
-  background: -webkit-linear-gradient(#074900 0%, #2a6110 100%); }
+  background: #23a900; }
   .campo-verde .roster-item {
     background: none; }
     .campo-verde .roster-item .old-player, .campo-verde .roster-item .new-player {
@@ -1096,6 +1161,14 @@ input[type=checkbox] {
   float: left;
   background: #FFFFFF;
   width: 100%; }
+  .team_item_list .info {
+    width: 76%;
+    float: left;
+    position: relative; }
+  .team_item_list .avatar {
+    width: 20%;
+    margin: 10px 2%;
+    height: auto; }
 
 .team_item_list .name_team {
   width: 90%;
@@ -1117,14 +1190,8 @@ input[type=checkbox] {
   color: #000000; }
 
 .bottom_team .credits {
-  float: left;
-  position: relative;
-  height: 26px;
-  /* padding: 3px; */
   margin: 0 1% 0 0;
-  line-height: 26px;
-  color: #FF0000;
-  width: 49%; }
+  color: #FF0000; }
 
 .team_single #side-roster {
   margin: 0;
@@ -1303,3 +1370,13 @@ span.county-days, span.county-minutes, span.county-hours, span.county-seconds {
   background: #FFFFFF;
   margin-top: 10px;
   padding: 10px; }
+
+/* IMAGE BOX */
+.image-box {
+  height: 220px;
+  border: 5px #AAAAAA solid;
+  width: 100%;
+  overflow: hidden; }
+  .image-box img {
+    width: auto;
+    height: 220px; }
