--- a/style.css
+++ b/style.css
@@ -336,10 +336,12 @@ tbody.list {
 .new-player {
     width: 49%;
 }
-td.name-role {
+
+.name-role {
     padding: 5px;
     color: #FFF;
     margin-bottom: 5px;
+    line-height: 40px;
 }
 table.roster-item {
     width: 100%;
