--- a/css/style.css
+++ b/css/style.css
@@ -121,12 +121,11 @@ h1, h2, h3 {
 .avatar {
   float: left;
   position: relative;
-  margin: 10px 10px 10px 0;
-  height: 80px;
-  width: 80px;
+  height: 70px;
+  width: 70px;
   background: none; }
   .avatar img {
-    max-height: 80px;
+    max-height: 70px;
     width: auto; }
 
 .user-info {
@@ -137,10 +136,10 @@ h1, h2, h3 {
     color: #FF0000;
     float: left;
     position: relative;
-    margin: 10px 5%;
-    height: 35px;
-    line-height: 35px;
-    font-size: 30px;
+    margin: 5px 5%;
+    height: 25px;
+    line-height: 25px;
+    font-size: 20px;
     width: 90%; }
   .user-info .username {
     margin-bottom: 5px; }
@@ -148,6 +147,49 @@ h1, h2, h3 {
     margin-top: 5px;
     font-size: 26px;
     color: black; }
+
+ul.nav.navbar-nav .red_color {
+  color: #FF0000; }
+  ul.nav.navbar-nav .red_color * {
+    color: #FF0000; }
+
+@media screen and (min-width: 930px) {
+  nav.navbar.navbar-default {
+    float: left;
+    width: 100%;
+    height: 100px; }
+  .collapse.navbar-collapse {
+    height: 100px; }
+  .navbar-header {
+    height: 100px; }
+  ul.nav.navbar-nav {
+    float: right;
+    height: 100px; }
+    ul.nav.navbar-nav > li {
+      height: 100px;
+      line-height: 100px; }
+      ul.nav.navbar-nav > li > a {
+        height: 100px;
+        line-height: 70px; } }
+
+@media screen and (min-width: 768px) {
+  nav.navbar.navbar-default {
+    float: left;
+    width: 100%;
+    height: auto; }
+  .collapse.navbar-collapse {
+    height: auto; }
+  .navbar-header {
+    height: auto; }
+  ul.nav.navbar-nav {
+    float: right;
+    height: 100px; } }
+
+@media screen and (max-width: 767px) {
+  nav.navbar.navbar-default {
+    float: left;
+    width: 100%;
+    height: auto; } }
 
 .menu {
   list-style: none;
