Minimum Points per Round
* Bugfix: editformations.php
* New: minimum points per round

--- a/css/style.css
+++ b/css/style.css
@@ -153,6 +153,9 @@ ul.nav.navbar-nav .red_color {
   ul.nav.navbar-nav .red_color * {
     color: #FF0000; }
 
+.navbar {
+  margin-bottom: 0; }
+
 @media screen and (min-width: 930px) {
   nav.navbar.navbar-default {
     float: left;
