--- a/css/style.scss
+++ b/css/style.scss
@@ -215,6 +215,10 @@ ul.nav.navbar-nav{
 	}
 }
 
+.navbar{
+	margin-bottom: 0;
+}
+
 @media screen and (min-width: 930px){
 	
 	nav.navbar.navbar-default{
